--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-tetra = "0.7"
+ggez = "0.7"
+glam = "0.21.3"
+oorandom = "11.1.3"
+getrandom = "0.2.7"
+play = "0.5.3"
