--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,46 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-ggez = "0.7"
-glam = "0.21.3"
-oorandom = "11.1.3"
-getrandom = "0.2.7"
 play = "0.5.3"
+ggez = "0.7"
+bitflags = "1"
+zip = { version = "0.5", default-features = false }
+directories = "3"
+gfx = "0.18"
+gfx_core = "0.9"
+gfx_device_gl = "0.16"
+glyph_brush = "0.7"
+old_school_gfx_glutin_ext = "0.27"
+glutin = "0.27"
+winit = "0.25"
+image = {version = "0.23", default-features = false, features = ["gif", "png", "pnm", "tga", "tiff", "webp", "bmp", "dxt", ] }
+rodio = { version = "0.14", default-features = false, features = ["flac", "vorbis", "wav"] }
+serde = "1"
+serde_derive = "1"
+toml = "0.5"
+log = "0.4"
+lyon = "0.17"
+smart-default = "0.6"
+glam = { version = "0.20", features = ["mint"]}
+# Has to be the same version of mint that our math lib uses here.
+mint = "0.5"
+gilrs = "0.8"
+approx = "0.5"
+bytemuck = "1.7"
+
+[dev-dependencies]
+chrono = "0.4"
+fern = "0.6"
+oorandom = "11"
+argh = "0.1"
+rand = "0.8"
+keyframe = "1"
+keyframe_derive = "1"
+num-traits = "0.2"
+num-derive = "0.3"
+
+skeptic = "0.13"
+getrandom = "0.2"
+
+[build-dependencies]
+skeptic = "0.13"
